# SmartClipboard

./: .gitignore  CODE_AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  README.md  package-lock.json  package.json
.cargo/: audit.toml
.codex/: codex-os.manifest.json
.codex/bootstrap/: tests-docs.v1.json
.github/workflows/: ci.yml
scripts/: clean.mjs  lean-dev.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: categorizer.rs  clipmon.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  sensitive.rs
src-tauri/src/platform/: macos.rs  mod.rs
src/components/: CodeBlock.tsx  DetailView.tsx  EmptyState.tsx  HistoryItem.tsx  HistoryList.test.tsx  HistoryList.tsx  SearchBar.tsx  SettingsPanel.tsx  StatsPanel.tsx
src/lib/: ipc.ts
src/styles/: index.css
